--- a/public/global.css
+++ b/public/global.css
@@ -10,9 +10,10 @@ body {
 	padding: 0;
 	box-sizing: border-box;
 	font-family: Arial, Helvetica, sans-serif;
-	display: flex;
+	/* display: flex;
+	flex-direction: column;
 	align-items: center;
-	justify-content: center;
+	justify-content: center; */
 }
 
 *, *::after, *::before {
