--- a/public/global.css
+++ b/public/global.css
@@ -20,3 +20,51 @@ body {
 	box-sizing: border-box;
 }
 
+
+main.page {
+	padding: 1em;
+	width: 100%;
+	margin: 0 auto;
+}
+
+main.page h1 {
+	color: #5FC5EB;
+	text-transform: uppercase;
+	font-size: 2em;
+	font-weight: 100;
+	text-align: center;
+	margin: 1rem auto 2rem auto;
+}
+
+main.page small {
+	margin-top: 0.25rem;
+}
+
+.params {
+	display: grid;
+	grid-template-rows: repeat(3, max-content);
+	grid-template-columns: repeat(2, 1fr);
+	row-gap: 1rem;
+	column-gap: 1rem;
+	max-width: 560px;
+	margin: 0 auto;
+}
+
+.params > div {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	grid-area: var(--n)
+}
+.params > div input {
+	width: 100%;
+	padding: 0.5rem;
+	margin-top: 0.5rem;
+	border-radius: 3px;
+	outline: none;
+	border: 1px solid rgba(33, 33, 33, .2);
+}
+
+.params > div input:focus {
+	box-shadow: 0 0 6px 1px rgba(41, 159, 255, 0.26);
+}
